flicker fix

--- a/css/index.css
+++ b/css/index.css
@@ -84,13 +84,11 @@ body.no-overflow {
 				width: 100%;
 			}
 		.sticky-navbar header nav .menu.mobile {
-			display: block;
+			display: none;
 			position: absolute;
 			left: 0;
 			right: 0;
 			top: 80px;
-			overflow: hidden;
-
 			opacity: 0;
 			visibility: hidden;
 			transition: all 0.4s;
